--- a/src/App.css
+++ b/src/App.css
@@ -1,24 +1,15 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@600&display=swap');
+
+* {
+  margin: 0;
+  padding: 0;
+  font-family: "Comfortaa";
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
-
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+.navbar_block {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  background-color: #EAB23C;
+  padding: 2rem;
 }
