--- a/src/App.css
+++ b/src/App.css
@@ -19,6 +19,20 @@
   flex-direction: column;
   align-items: center;
   padding: 10rem;
-  background-color: rgba(0, 0, 0, 0.842);
+  background-color: #F4D161;
+}
+
+.profile_block {
+  background-color: rgba(0, 0, 0, 0.774);
   color: #fff;
+  padding: 10rem;
+}
+
+.profile_content p{
+  text-align: justify;
+  padding: 1rem;
+  font-size: 1.4rem;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 30vw;
 }
