--- a/src/App.css
+++ b/src/App.css
@@ -44,13 +44,15 @@ h2 {
 }
 
 .profile_block {
-  padding: 3rem;
+  padding: 1rem;
+  padding-bottom: 5rem;
   background-color: #3E3C39;
   color: #fff;
 }
 
 .profile_content {
   padding-top: 2rem;
+  line-height: 1.4;
 }
 
 .profile_content p{
@@ -69,7 +71,7 @@ h2 {
   padding-top: 2rem;
   display: flex;
   flex-direction: row;
-  justify-content: space-evenly;
+  justify-content: space-between;
 }
 
 .skills_details {
@@ -123,4 +125,20 @@ ul {
 strong {
   font-weight: 700;
   font-family: "Montserrat";
+}
+
+@media (max-width: 700px) {
+
+  .project_block {
+    display: flex;
+    flex-direction: column;
+    width: 20vw;
+  }
+  
+  .project_row {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+  }
+
 }
